--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,45 +8,16 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="7">Master Suite</th></tr>
-<tr><th colspan="7">Regression Suite</th></tr>
-<tr><td><a href="#t0">Regression Login Test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">18</td><td></td><td></td></tr>
-<tr class="stripe"><td><a href="#t1">Regression Validate Title Test</a></td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">8</td><td></td><td></td></tr>
 <tr><th colspan="7">Functional Suite</th></tr>
-<tr><td><a href="#t2">Login Test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">98</td><td></td><td></td></tr>
-<tr class="stripe"><td><a href="#t3">Validate Test</a></td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">16</td><td></td><td></td></tr>
-<tr><td><a href="#t4">Dependency Test</a></td><td class="num">1</td><td class="num attn">2</td><td class="num attn">1</td><td class="num">28</td><td></td><td></td></tr>
-<tr><th>Total</th><th class="num">5</th><th class="num attn">2</th><th class="num attn">3</th><th class="num">168</th><th colspan="2"></th></tr>
+<tr><td><a href="#t0">Login Test</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">8</td><td>bvt</td><td></td></tr>
+<tr class="stripe"><td><a href="#t1">Validate Test</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">1</td><td>bvt</td><td></td></tr>
+<tr><td><a href="#t2">Dependency Test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">420</td><td>bvt</td><td></td></tr>
+<tr><th>Total</th><th class="num">1</th><th class="num">0</th><th class="num">0</th><th class="num">429</th><th colspan="2"></th></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Master Suite</th></tr></tbody><tbody><tr><th colspan="4">Regression Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Regression Login Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">regression.TestCase1</td><td><a href="#m0">doLogin</a></td><td rowspan="1">1593669267724</td><td rowspan="1">1</td></tr><tr class="passedeven"><td><a href="#m1">doUserReg</a></td><td rowspan="1">1593669267717</td><td rowspan="1">3</td></tr></tbody>
-<tbody id="t1"><tr><th colspan="4">Regression Validate Title Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">regression.TestCase2</td><td><a href="#m2">validateTitles</a></td><td rowspan="1">1593669267751</td><td rowspan="1">3</td></tr></tbody>
-<tbody><tr><th colspan="4">Functional Suite</th></tr></tbody><tbody id="t2"><tr><th colspan="4">Login Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">testcases.TestCase1</td><td><a href="#m3">doLogin</a></td><td rowspan="1">1593669267503</td><td rowspan="1">2</td></tr><tr class="passedeven"><td><a href="#m4">doUserReg</a></td><td rowspan="1">1593669267482</td><td rowspan="1">10</td></tr></tbody>
-<tbody id="t3"><tr><th colspan="4">Validate Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">testcases.TestCase2</td><td><a href="#m5">validateTitles</a></td><td rowspan="1">1593669267607</td><td rowspan="1">8</td></tr></tbody>
-<tbody id="t4"><tr><th colspan="4">Dependency Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">testcases.TestCase3</td><td><a href="#m6">doUserReg</a></td><td rowspan="1">1593669267656</td><td rowspan="1">2</td></tr><tr><th colspan="4">Dependency Test &#8212; skipped</th></tr><tr class="skippedeven"><td rowspan="2">testcases.TestCase3</td><td><a href="#m7">doLogin</a></td><td rowspan="1">1593669267663</td><td rowspan="1">0</td></tr><tr class="skippedeven"><td><a href="#m8">fourthTest</a></td><td rowspan="1">1593669267674</td><td rowspan="1">0</td></tr><tr><th colspan="4">Dependency Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testcases.TestCase3</td><td><a href="#m9">thirdTest</a></td><td rowspan="1">1593669267668</td><td rowspan="1">3</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Functional Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4" class="invisible"/></tr></tbody>
+<tbody id="t1"><tr><th colspan="4" class="invisible"/></tr></tbody>
+<tbody id="t2"><tr><th colspan="4">Dependency Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testcases.TestCase3</td><td><a href="#m0">fourthTest</a></td><td rowspan="1">1593682833409</td><td rowspan="1">13</td></tr></tbody>
 </table>
-<h2>Regression Login Test</h2><h3 id="m0">regression.TestCase1#doLogin</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">regression.TestCase1#doUserReg</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>Regression Validate Title Test</h2><h3 id="m2">regression.TestCase2#validateTitles</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: The following asserts failed:
-	expected [Yahoo.com] but found [Gmail.com],
-	Image not present. expected [false] but found [true],
-	Text box not present. expected [false] but found [true]
-	at regression.TestCase2.validateTitles(TestCase2.java:42)
-... Removed 27 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>Login Test</h2><h3 id="m3">testcases.TestCase1#doLogin</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">testcases.TestCase1#doUserReg</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>Validate Test</h2><h3 id="m5">testcases.TestCase2#validateTitles</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: The following asserts failed:
-	expected [Yahoo.com] but found [Gmail.com],
-	Image not present. expected [false] but found [true],
-	Text box not present. expected [false] but found [true]
-	at testcases.TestCase2.validateTitles(TestCase2.java:42)
-... Removed 27 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>Dependency Test</h2><h3 id="m6">testcases.TestCase3#doUserReg</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: User is not registered successfully.
-	at testcases.TestCase3.doUserReg(TestCase3.java:11)
-... Removed 27 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m7">testcases.TestCase3#doLogin</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.Throwable: Method TestCase3.doLogin()[pri:2, instance:testcases.TestCase3@350aac89] depends on not successfully finished methods
-... Removed 19 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m8">testcases.TestCase3#fourthTest</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.Throwable: Method TestCase3.fourthTest()[pri:4, instance:testcases.TestCase3@350aac89] depends on not successfully finished methods
-... Removed 19 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m9">testcases.TestCase3#thirdTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Login Test</h2><h2>Validate Test</h2><h2>Dependency Test</h2><h3 id="m0">testcases.TestCase3#fourthTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
